--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+		<link rel="icon" type="image/svg+xml" href="favicon.svg">
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
@@ -49,3 +49,4 @@
 	</body>
 
 </html>
+
